--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Jordan Zurack
+description: Feel free to bookmark this page to keep an eye on my project updates
